# MuQ

./: .gitignore  README.md  pyproject.toml  search_res.json  sse_stream.txt  state.json
src/muq/: __init__.py  config.py  main.py
src/muq/backend/: database.py  main.py  song_validation.py  voting_sys.py  voting_system.py
src/muq/songs/: BaraBadaBastu.json  main.py  test.json
src/muq/static/: output.css
src/muq/static/css/: output.css
src/muq/templates/: admin.html  index.html
src/muq/templates/components/: song_card.html
