[project]
name = "muq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.1.0",
    "dotenv>=0.9.9",
    "pytailwindcss-extra>=0.1.1",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "lxml>=5.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python3 -m muq.main"
backend = "python3 -m muq.backend.main"
validation = "python3 -m muq.backend.song_validation"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/muq"]
