[project]
name = "muq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Luis Schuimer", email = "85784931+LuisSchuimer@users.noreply.github.com" }
]
dependencies = [
    "flask>=3.1.0",
    "dotenv>=0.9.9",
    "pytailwindcss-extra>=0.2.1",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "lxml>=5.3.2",
    "pydantic>=2.11.3",
    "peewee>=3.17.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "python3 -m muq.main"
backend = "python3 -m muq.backend.main"
validation = "python3 -m muq.backend.song_validation"
css-gen = "rye run tailwindcss-extra --input src/muq/static/css/input.css --output src/muq/static/css/output.css --watch"
css-build = "rye run tailwindcss-extra --input src/muq/static/css/input.css --output src/muq/static/css/output.css"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/muq"]
